--- a/public/assets/css/homeStyle.css
+++ b/public/assets/css/homeStyle.css
@@ -25,17 +25,26 @@
 }
 
 .quote-trial{
-    font-family: dancing;
-    font-size: 22px;
     z-index: 7;
     position: absolute;
-    bottom: -13vh;
-    color: white;
-    left: 42vh;
+    bottom: -16vh;
+    left: 41vh;
+    width: 340px;
 }
 .quote-trial img{
     width: 10% !important;
     margin-right: 7px;
+}
+
+.typed-cursor{
+    font-size: 30px !important;
+    font-weight: 600 !important;
+    line-height: 1.25em !important;
+}
+
+.btn-signIn:hover{
+    background: white !important;
+    color: #000000 !important;
 }
 
 .blink {
@@ -95,19 +104,19 @@ img{
     width: 100%;
     height: 100vh;
     position: relative;
-    background: url("/public/assets/img/homepage_image.jpg") no-repeat center center/cover;
+    background: url('/public/assets/img/homepage_image.png') no-repeat center center/cover;
 }
 
 .showcase::after{
-    content: "";
+    content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: 1;
-    background: rgba(0, 0, 0, 0.6);
-    box-shadow: 120px 100px 250px #000000 , inset -120px -100px 250px #000000;
+    background: rgba(0, 0, 0, 0.65);
+    box-shadow: inset 30px 10px 150px #000000;
 }
 
 
@@ -118,7 +127,7 @@ img{
 }
 
 .showcase-top img{
-    width: 140px;
+    width: 170px;
     position: absolute;
     top: 50%;
     left: 0;
@@ -234,11 +243,23 @@ img{
     border-radius: 5px;
 }
 
+@media screen and (max-width: 1440px) and (min-width: 768px) {
+    .showcase-content .btn-lg{
+        left: 38.3vh !important;
+    }
+}
+
+@media screen and (max-width: 1917px) {
+    .showcase-content .btn-lg{
+        left: 35.5vh !important;
+    }
+}
+
 .showcase-content .btn-lg{
     position: absolute;
     font-size: 20px;
     text-align: center;
-    left: 19%;
+    left: 35vh;
     padding: 13px 19px 12px 19px;
     border-radius: 0px 7px 7px 0px;
     background: #37b6ffff;
