--- a/public/assets/css/signupStyle.css
+++ b/public/assets/css/signupStyle.css
@@ -3,6 +3,42 @@
     src: url('/public/assets/webfonts/Poppins-Regular.ttf');
 }
 
+.payment{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding: 20px 20px;
+	border: 2px solid #ccc;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.payment p{
+	margin: 0 !important;
+	color: black;
+	font-size: 16px;
+}
+
+.payment .arrow_right{
+	width: 20px;
+	transform: translatex(170px);
+}
+
+.logos-payment{
+	display: flex;
+	flex-direction: row;
+	margin: 0 15px;
+}
+
+.logos-payment img{
+	height: 25px;
+    width: 39px;
+    margin: 1px 6px 1px 0;
+    float: left;
+}
+
+
+
 .body{
 	background-color: #fff !important;
 }
