--- a/public/assets/css/homeStyle.css
+++ b/public/assets/css/homeStyle.css
@@ -58,6 +58,11 @@
     box-shadow: none !important;
 }
 
+.btn-signIn:not(:hover){
+    transition: all 300ms ease;
+    -webkit-transition: all 300ms ease;
+}
+
 .btn-signIn:hover{
     background: #ffffff !important;
     color: #000000 !important;
@@ -253,6 +258,11 @@ button {
     color:white;
     letter-spacing: 0.2pt !important;
     display: inline-block !important; 
+}
+
+button:not(:hover){
+    transition: all 300ms ease;
+    -webkit-transition: all 300ms ease;
 }
 
 button:hover{
